--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<div class="content">	
 			<h1>Read</h1>
-			<p>You may download a full PDF of <a href="http://dl.dropboxusercontent.com/u/20075901/LIES%20Final%20Download%20Single%20Page.pdf">Volume I</a> or of <a href="http://liesjournal.net/Vol.-ii/lies-v-2-pdf-whole-1/">Volume II</a>, or read individual articles below. </p>
+			<p>You may download a full PDF of <a href="http://dl.dropboxusercontent.com/u/20075901/LIES%20Final%20Download%20Single%20Page.pdf">Volume I</a> or of <a href="http://www.liesjournal.net/Lies%20Volume%20II.pdf/">Volume II</a>, or read individual articles below. </p>
 			<div id="accordion" class="customlist">
 	  			<h2>LIES Volume I</h2>
 	  			<div>
