--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 		    <p>LIES is a journal spearheaded by a queer feminist collective based in multiple cities: Oakland, Baltimore, Philadelphia, New York, London. LIES is a platform for certain conversations and critiques that are difficult, impossible or dangerous if cis men are in the room. We attack the legacy of racism and transphobia that has plagued feminist organizing, and strive to develop new autonomous feminist practices that take antagonism to white supremacy and transphobia as essential parts of feminist struggle. LIES came out of our experiences within these struggles. It seeks to embody and develop in print the practice of autonomy that we needed to save ourselves in the midst of movements squared on patriarchy and fueled by the subordination of everyone but white cis men. LIES is a communist journal against communists. We draw our purpose and support from feminist, queer, and trans circles, our friends and comrades to whom this journal is devoted.</p>
 		</div>
 		
-
+		<div class="content">
+      	<h1>CALL 2017</h1>
+		    <p>write a thing.</p>
+		</div>
+    
 		<div class="content">	
 			<h1>Read</h1>
 			<p>You may download a full PDF of <a href="http://dl.dropboxusercontent.com/u/20075901/LIES%20Final%20Download%20Single%20Page.pdf">Volume I</a> or of <a href="volume2.pdf">Volume II</a>, or read individual articles below. </p>
