anchor links bottom and top

--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
 <div id="body">
 	
 	<div id="top">
-		<div id="topinner">
-			<img class="down" src="downarrow.png">
-		</div>
+    <a href="#below-top">
+      <div id="topinner">
+        <img class="down" src="downarrow.png">
+      </div>
+    </a>
 	</div>
 	<div class="bottom">
 		<div class="content">
@@ -108,6 +110,7 @@
 		</div>
     
 		<div class="content">	
+      <a name="below-top"></a>
 			<h1>Read</h1>
 			<p>You may download a full PDF of <a href="http://dl.dropboxusercontent.com/u/20075901/LIES%20Final%20Download%20Single%20Page.pdf">Volume I</a> or of <a href="volume2.pdf">Volume II</a>, or read individual articles below. </p>
 			<div id="accordion" class="customlist">
