fixes anchor link

--- a/index.html
+++ b/index.html
@@ -98,11 +98,9 @@
 <div id="body">
 	
 	<div id="top">
-    <a href="#below-top">
-      <div id="topinner">
-        <img class="down" src="downarrow.png">
-      </div>
-    </a>
+	      <div id="topinner">
+		<a href="#below-top"><img class="down" src="downarrow.png"></a>
+	      </div>
 	</div>
 	<div class="bottom">
 		<div class="content">
