--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
     
     		<div class="content">    
           <a name="below-top"></a>
-       			<h1>LIES Journal is now accepting submissions for LIES Volume III (2017)<h1>
+       			<h1>LIES Journal is now accepting submissions for LIES Volume III (2017)</h1>
           	<p>LIES is a platform for materialist, communist, autonomous, and otherwise antagonistic writing by non cis men. We seek to embody and develop in print autonomous feminist practices that understand opposition to capitalism, cisheteropatriarchy, white supremacy, xenophobia, and the legacies of colonialism and slavery as central to feminist struggle. We especially encourage submissions by writers of color; writers of trans, non-binary, two-spirit, and all other non-cisgender experience; and writers with indigenous, diasporic, migrant, and cross-cultural backgrounds. We hope to solicit writings that foreground decolonial perspectives and challenge Euro-American-centric historical and analytical frameworks.
             <p>We publish a variety of written formats, including: essay-length analytical pieces, poetry, creative writing, workers’ inquiries, and explorations of archival materials, and more. We are also interested in publishing pieces that have not appeared in English yet; if you can help translate or if you know of a piece that needs translating, please get in touch!</p>
 		<p></p>
+              <p></p>
 	<h2>Topics of interest include, but are not limited to: </h2>
 				<div align="left">
             <p>&#9733; Materialist-feminist contemporary and historical analyses of the neo-fascist, white and/or ethno-nationalist, xenophobic right</p>
@@ -131,7 +132,7 @@
             <p>&#9733; Historical and contemporary conversations and material exchanges between the South and the East; South-to-South dialogues</p>
             <p>&#9733; Report backs from ongoing struggles and resistance movements</p>
             </div>
-              <p>Initial pitches, abstracts, or first drafts are due by <b>Tuesday 14th February 2017</b>. Send submissions and any questions to liesjournal@gmail.com. Due to financial limitations of the project, we regret that at present all authors are unpaid; however contributors will be given close editorial support in developing their work. Please be sure to review our previous volumes and our mission statement on our website: liesjournal.net.
+              <p>Initial pitches, abstracts, or first drafts are due by <b>Tuesday 14th February 2017</b>. Send submissions and any questions to liesjournal@gmail.com. Due to financial limitations of the project, we regret that at present all authors are unpaid; however contributors will be given close editorial support in developing their work.
 </p>
             </div>
           
