--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
             <p>&#9733; Historical and contemporary conversations and material exchanges between the South and the East; South-to-South dialogues</p>
             <p>&#9733; Report backs from ongoing struggles and resistance movements</p>
             </div>
-              <p>Initial pitches, abstracts, or first drafts are due by <b>Tuesday 14th February 2017</b>. Send submissions and any questions to liesjournal@gmail.com. Due to financial limitations of the project, we regret that at present all authors are unpaid; however contributors will be given close editorial support in developing their work.
+			<p></p>
+              <p>Initial pitches, abstracts, or first drafts are due by <b>Tuesday 14th February 2017</b>. Send submissions and any questions to liesjournal [at] gmail [dot] com. Due to financial limitations of the project, we regret that at present all authors are unpaid; however contributors will be given close editorial support in developing their work.
 </p>
             </div>
           
