--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             <p>&#9733; Healthcare, care work, and alternative care networks</p>
             <p>&#9733; Disability and ableism </p>
             <p>&#9733; Transgender militancy, gender struggle and/or abolition, institutional and vigilante violence against trans people</p>
-            <p>&#9733; Inquiries into the nature of gender, race, and/or class
-               Militancy and feminism</p>
-            <p>&#9733; Workers’ inquiries with an eye to race, gender, and migration
-               State violence, dispossession, displacement, and regimes of migration control</p>
+          <p>&#9733; Inquiries into the nature of gender, race, and/or class</p>
+            <p>&#9733; Militancy and feminism</p>
+          <p>&#9733; Workers’ inquiries with an eye to race, gender, and migration</p>
+             <p>&#9733; State violence, dispossession, displacement, and regimes of migration control</p>
             <p>&#9733; Border-crossing and cross-cultural dwelling</p>
             <p>&#9733; Indigenous resistance movements, decolonial thought and methodologies</p>
             <p>&#9733; Resource extraction and climate change crises</p>
