--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+  
+  <div id="body">
+	
+	
+	<div class="bottom">
+  </div>
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
