--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="content">
         <a name="below-top"></a>
         <h1>Read</h1>
-        <p>You may download a full PDF of <a href="http://dl.dropboxusercontent.com/u/20075901/LIES%20Final%20Download%20Single%20Page.pdf">Volume I</a> or of <a href="volume2.pdf">Volume II</a>, or read individual articles below. </p>
+        <p>You may download a full PDF of <a href="lies-volume1.pdf">Volume I</a> or of <a href="volume2.pdf">Volume II</a>, or read individual articles below. </p>
         <div id="accordion" class="customlist">
           <h2>LIES Volume I</h2>
           <div>
