png logo, updates copy (description back to top), css

--- a/essay-header.html
+++ b/essay-header.html
@@ -1,1 +1,1 @@
-<a class="header-logo" href="index.html"><img class="header-logo-image" src="lies-header.gif"></a>
+<a href="index.html"><img src="lies.png" class="header-img"></a>
