--- a/index.html
+++ b/index.html
@@ -92,119 +92,17 @@
     <div id="body">
       <div class="content">
         <a name="below-top"></a>
-        <h1>LIES Journal</h1>
-        <h3>LIES is now accepting submissions for Volume III (2017)</h3>
-        <p>LIES is a platform for materialist, communist, autonomous, and otherwise antagonistic writing by non cis men. We seek to embody and develop in print autonomous feminist practices that understand opposition to capitalism, cisheteropatriarchy, white supremacy, xenophobia, and the legacies of colonialism and slavery as central to feminist struggle. We especially encourage submissions by writers of color; writers of trans, non-binary, two-spirit, and all other non-cisgender experience; and writers with indigenous, diasporic, migrant, and cross-cultural backgrounds. We hope to solicit writings that foreground decolonial perspectives and challenge Euro-American-centric historical and analytical frameworks.
-        <p>We publish a variety of written formats, including: essay-length analytical pieces, poetry, creative writing, workers’ inquiries, and explorations of archival materials, and more. We are also interested in publishing pieces that have not appeared in English yet; if you can help translate or if you know of a piece that needs translating, please get in touch!</p>
-        <p></p>
-        <p></p>
+        <img src="lies.png" class="header-img">
+        <p>LIES is a journal spearheaded by a queer feminist collective based in multiple cities: Oakland, New York, Baltimore, and New Orleans. LIES is a platform for certain conversations and critiques that are difficult, impossible or dangerous if cis men are in the room. We attack the legacy of racism and transphobia that has plagued feminist organizing, and strive to develop new autonomous feminist practices that take antagonism to white supremacy and transphobia as essential parts of feminist struggle. LIES came out of our experiences within these struggles. It seeks to embody and develop in print the practice of autonomy that we needed to save ourselves in the midst of movements squared on patriarchy and fueled by the subordination of everyone but white cis men. LIES is a communist journal against communists. We draw our purpose and support from feminist, queer, and trans circles, our friends and comrades to whom this journal is devoted.</p>
+        <p>Note: LIES Vol. I is currently sold out.</p>
 
-      <div class="customlist">
-      	<h2>Topics of interest include, but are not limited to:</h2>
-        <table class="stockists">
-          
-          <tr>
-            <td class="nonlinkcell stockist">
-              Materialist-feminist contemporary and historical analyses of the neo-fascist, white and/or ethno-nationalist, xenophobic right
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Major political upheavals such as Brexit in the U.K. and the Trump presidency in the U.S.
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Global perspectives on anti-blackness
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Healthcare, care work, and alternative care networks
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Disability and ableism 
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Transgender militancy, gender struggle and/or abolition, institutional and vigilante violence against trans people
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Inquiries into the nature of gender, race, and/or class
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Militancy and feminism
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Workers’ inquiries with an eye to race, gender, and migration
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              State violence, dispossession, displacement, and regimes of migration control
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Border-crossing and cross-cultural dwelling
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Indigenous resistance movements, decolonial thought and methodologies
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Resource extraction and climate change crises
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Value form theory, communization, and other political-economic critique
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Ontology and historical materialism
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Historical and contemporary conversations and material exchanges between the South and the East; South-to-South dialogues
-            </td>
-          </tr>
-          <tr>
-            <td class="nonlinkcell stockist">
-              Report backs from ongoing struggles and resistance movements
-            </td>
-          </tr>
-        </table>
-    </div>
-
-
-
-
-
-
-        <p></p>
-        <p>Initial pitches, abstracts, or first drafts are due by <b>Tuesday 14th February 2017</b>. Send submissions and any questions to liesjournal [at] gmail [dot] com. Due to financial limitations of the project, we regret that at present all authors are unpaid; however contributors will be given close editorial support in developing their work.</p>
       </div>
       <div class="content">
         <a name="below-top"></a>
         <h1>Read</h1>
-        <p>You may download a full PDF of <a href="lies-volume1.pdf">Volume I</a> or of <a href="volume2.pdf">Volume II</a>, or read individual articles below. </p>
         <div id="accordion" class="customlist">
-          <h2>LIES Volume I</h2>
+          <h2>LIES Volume I <a href="lies-volume1.pdf" class="downloadlinks">Full PDF</a></h2>
+
           <div>
             <table>
               <tr>
@@ -329,7 +227,7 @@
                 </td>
             </table>
           </div>
-          <h2>LIES Volume II</h2>
+          <h2>LIES Volume II <a href="volume2.pdf" class="downloadlinks">Full PDF</a></h2>
           <div>
             <table>
               <tr>
@@ -419,11 +317,11 @@
               </tr>
               <tr>
                 <td class="stockist"><a href="http://www.akpress.org/liesjournal.html">AK Press, USA</a></td>
-                <td><a href="http://www.akpress.org/liesjournal.html"><span class="volumes">Vol. I &amp; II</span></a></td>
+                <td><a href="http://www.akpress.org/liesjournal.html"><span class="volumes">Vol. II</span></a></td>
               </tr>
               <tr>
                 <td class="stockist"><a href="http://www.akuk.com/index.php?_a=product&product_id=7524">AK Press, UK</a></td>
-                <td><a href="http://www.akuk.com/index.php?_a=product&product_id=7524"><span class="volumes">Vol. I &amp; II</span></a></td>
+                <td><a href="http://www.akuk.com/index.php?_a=product&product_id=7524"><span class="volumes">Vol. II</span></a></td>
               </tr>
               <tr>
                 <td class="nonlinkcell">
@@ -474,7 +372,7 @@
               </tr>
               <tr>
                 <td class="stockist"><a href="http://www.boxcarbooks.org/">Boxcar Books, Bloomington</a></td>
-                <td><a href="http://www.boxcarbooks.org/"><span class="volumes">Vol. I & II</span></a></td>
+                <td><a href="http://www.boxcarbooks.org/"><span class="volumes">Vol. II</span></a></td>
               </tr>
               <tr>
                 <td class="nonlinkcell">
@@ -495,12 +393,8 @@
             For wholesale orders (20+), please
             <script type="text/javascript">
               document.write("<a href=\"mail" + "to:" + new Array("liesjournal@","ail.com").join("gm") + "\">" + new Array("contact us") + "</" + "a>");
-            </script>
-            .
+            </script>.
           </p>
-          <div class="content">
-            <p>LIES is a journal spearheaded by a queer feminist collective based in multiple cities: Oakland, Baltimore, Philadelphia, New York, London. LIES is a platform for certain conversations and critiques that are difficult, impossible or dangerous if cis men are in the room. We attack the legacy of racism and transphobia that has plagued feminist organizing, and strive to develop new autonomous feminist practices that take antagonism to white supremacy and transphobia as essential parts of feminist struggle. LIES came out of our experiences within these struggles. It seeks to embody and develop in print the practice of autonomy that we needed to save ourselves in the midst of movements squared on patriarchy and fueled by the subordination of everyone but white cis men. LIES is a communist journal against communists. We draw our purpose and support from feminist, queer, and trans circles, our friends and comrades to whom this journal is devoted.</p>
-          </div>
           <p>
             <a href="https://www.facebook.com/LiesJournal/">Facebook</a> • <a href="http://liesjournal.tumblr.com/">Tumblr</a> • 
             <script type="text/javascript">
