--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
           <div>
             <table>
               <tr>
+                 <h2>LIES Volume I FULL PDF <a href="lies-volume1.pdf" class="downloadlinks">Full PDF</a></h2>
+              </tr>
+              <tr>
                 <td class="article"><a href="volume1-01-editorialnote.html">Editorial Note - LIES Collective</a></td>
                 <td><a href="volume1-01-editorialnote.pdf"><span class="downloadlinks">PDF</span></a></td>
               </tr>
