--- a/pluma-sumaq.html
+++ b/pluma-sumaq.html
@@ -6,10 +6,27 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />	
 	<title>A Disgrace Reserved for Prostitutes: Complicity & the Beloved Community | LIES Journal</title>
 
+<link rel="stylesheet" type="text/css" href="lies.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<script type="text/javascript">
 
-		
-	 
-	
+		$(function() {
+	    	$( "#accordion" ).accordion({
+          		active: false,
+            	collapsible: false,
+            	heightStyle: "content",
+
+        	});
+	 	});
+
+	 	$(function(){
+		    $('.essay-header').load('essay-header.html');
+		    $('.essay-footer').load('essay-footer.html');
+		});
+
+	 	
+	</script>	
 </head>
 <body>
 <div class="bottom content">			
