--- a/pluma-sumaq.html
+++ b/pluma-sumaq.html
@@ -35,7 +35,8 @@
 
 	
 	<div class="author">Pluma Sumaq</div>
-	<div class="essay-title">A Disgrace Reserved for Prostitutes: Complicity & the Beloved Community</div>
+	<div class="essay-title">A Disgrace Reserved for Prostitutes:</div>
+	<div class="essay-title">Complicity & the Beloved Community</div>
 	<div class="essay">
 		<p class="epigraph"><span class="notitalic">'I propose to consider a dimension of political life that has to do with our exposure to violence and our complicity in it, with our vulnerability to loss and the task of mourning that follows, and with finding a basis for community in these conditions. ’ </p>
 		<p class="epigraph-attribution">Judith Butler, from <span class="italic">Precarious Life</span></p>
