--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
           <h2>LIES Volume II <a href="volume2.pdf" class="downloadlinks">Full PDF</a></h2>
           <div>
             <table>
+							<tr>
+							<td class="article">
+                  <a href="volume2.pdf">LIES Volume II FULL PDF</a>
+                </td>
+								 <td><span class="downloadlinks"><a href="volume2.pdf">PDF Download</a>
+              </tr>
               <tr>
                 <td class="article nonlinkcell">Editorial - LIES Collective</td>
               </tr>
@@ -244,6 +250,9 @@
               </tr>
               <tr>
                 <td class="article nonlinkcell">I am Here as a Victim - Michelle R.</td>
+              </tr>
+							<tr>
+                <td class="article"><a href="pluma-sumaq.html">A Disgrace Reserved for Prostitutes: Complicity &amp; the Beloved Community - Pluma Sumaq</a></td>
               </tr>
               <tr>
                 <td class="article nonlinkcell">A Disgrace Reserved for Prostitutes: Complicity &amp; the Beloved Community - Pluma Sumaq</td>
