--- a/pluma-sumaq.html
+++ b/pluma-sumaq.html
@@ -68,7 +68,9 @@
 
 
 
-	<div class="essay-footer"></div>
+	<div class="essay-footer">
+	<p> Pluma Sumaq is a poet, writer and photographer. A two-time VONA Voices Fellow, she is the recipient of a Poets 11 Award, and the creator of a chapbook of poetry by people in the sex trade titled, Places of Eclipse. Her writing has appeared on, The Body Is Not An Apology, and she's completed a writing residency at Hedgebrook. Having grown up between the US and South America, her work is largely influenced by a lived experience of magical realism. She currently lives in California and is working on her first book, in a genre that is yet to be determined. Her website is: <a href="https://plumasumaq.com">plumasumaq.com</a> </p>
+	</div>
 
 
 
